new venue pages up

--- a/mtsoc.html
+++ b/mtsoc.html
@@ -2,23 +2,23 @@
 <html lang="en-gb">
 
 <head>
-  <title>Watford Palace Theatre on Stagedoor</title>
+  <title>Imperial College Musical Theatre Society on Stagedoor</title>
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com/watfordpalacetheatre" />
+  <link rel="canonical" href="http://stagedoorapp.com/mtsoc" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="Stay up to date with current and upcoming shows at Watford Palace Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta name="description" content="Stay up to date with current and upcoming shows at Imperial College Musical Theatre Society. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://venue/149">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://threatre_company/938">
 
   <meta property="fb:app_id" content="1645521525723763"/>
-  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/watfordpalacetheatre-stagedoor.png" />
-  <meta property="og:title" content="Follow Watford Palace Theatre on Stagedoor." />
-  <meta property="og:description" content="Stay up to date with current and upcoming shows at Watford Palace Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta property="og:url" content="http://stagedoorapp.com/watfordpalacetheatre" />
+  <meta property="og:image" content="http://stagedoorapp.com/images/theatre/mtsoc-stagedoor.png" />
+  <meta property="og:title" content="Follow Imperial College Musical Theatre Society on Stagedoor." />
+  <meta property="og:description" content="Stay up to date with current and upcoming shows at Imperial College Musical Theatre Society. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta property="og:url" content="http://stagedoorapp.com/mtsoc" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
   <meta property="article:author" content="https://www.facebook.com/stagedoorapp" />
@@ -26,10 +26,10 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com/watfordpalacetheatre" />
-  <meta name="twitter:title" content="Follow Watford Palace Theatre on Stagedoor." />
-  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Watford Palace Theatre. Save and Recommend your favourite ones. Plug into theatre!" />
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/watfordpalacetheatre-stagedoor.png" />
+  <meta name="twitter:url" content="http://stagedoorapp.com/mtsoc" />
+  <meta name="twitter:title" content="Follow Imperial College Musical Theatre Society on Stagedoor." />
+  <meta name="twitter:description" content="Stay up to date with current and upcoming shows at Imperial College Musical Theatre Society. Save and Recommend your favourite ones. Plug into theatre!" />
+  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/theatre/mtsoc-stagedoor.png" />
 </head>
 <body>
   <!-- Google Tag Manager -->
@@ -47,13 +47,13 @@
     <section class="padding--bottom-one-space  show-on-mobile">
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      <a href="stagedoor://venue/149" class="button--open-in-app">Open in App</a>
+      <a href="stagedoor://threatre_company/938" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
       <div class="float--right  width--40">
         <span class="iphone-screenshot  smaller-iphone-width-on-mobile">
-          <img src="images/theatre/iphone/watfordpalacetheatre.jpg" alt="Watford Palace Theatre stagedoor" class="iphone-screenshot__inside" />
+          <img src="images/theatre/iphone/mtsoc.jpg" alt="Imperial College Musical Theatre Society stagedoor" class="iphone-screenshot__inside" />
           <img src="images/iphone.png" alt="iphone placeholder" />
         </span>
       </div>
@@ -64,12 +64,12 @@
           <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
         </header>
 
-        <h1 class="padding--top-bottom-one-space">Watford Palace Theatre is now officially on Stagedoor.</h1>
-        <h2>Follow Watford Palace Theatre&rsquo;s page to stay up to date with current and upcoming shows.</h2><br/>
+        <h1 class="padding--top-bottom-one-space">Imperial College Musical Theatre Society is now officially on Stagedoor.</h1>
+        <h2>Follow Imperial College Musical Theatre Society&rsquo;s page to stay up to date with current and upcoming shows.</h2><br/>
         <h3>View behind the scenes photos and videos, get their latest news, and always be in the know!</h3>
         <p class="text--bigger  margin--top-two-spaces">
           <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour" title="Get Stagedoor for iOS">Get Stagedoor for iOS</a><br/>
-          <span class="block  center-on-mobile">Then search for <em>&ldquo;Watford Palace Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
+          <span class="block  center-on-mobile">Then search for <em>&ldquo;Imperial College Musical Theatre Society&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
         </p>
       </div>
     </section>
@@ -93,10 +93,10 @@
     </section>
 
     <section class="margin--top-bottom-four-spaces  horizontal--center  text--center">
-      <h2>Step into Watford Palace Theatre&rsquo;s Stagedoor.</h2>
+      <h2>Step into Imperial College Musical Theatre Society&rsquo;s Stagedoor.</h2>
       <p class="text--bigger  margin--top-one-space">
         <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link  button  button--download  no-link-colour  horizontal--center" title="Download the app">Download the app</a><br/>
-        <span class="block  center-on-mobile">Then search for <em>&ldquo;Watford Palace Theatre&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
+        <span class="block  center-on-mobile">Then search for <em>&ldquo;Imperial College Musical Theatre Society&rdquo;</em> and tap <span class="border--1px  border--opacity-25">Follow</span></span>
       </p>
     </section>
 
@@ -104,8 +104,8 @@
     <footer class="padding--top-two-spaces  padding--bottom-one-space  horizontal--center  text--center">
       <button id="toggle-button">Spread the word and share this!</button>
       <div class="sharing-container  padding--top-half-space">
-        <p>Post <a href="images/theatre/watfordpalacetheatre-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
-        <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/watfordpalacetheatre" />
+        <p>Post <a href="images/theatre/mtsoc-stagedoor.png" target="_blank">this image</a> on social networks and send to friends.</p>
+        <p>Or, copy this URL: <input type="text" onClick="this.select();" class="input  text--center" value="http://stagedoorapp.com/mtsoc" />
         <small class="text--grey">When pasting the URL, the above image will be attached automatically.</small>
         </p><br/>
         <div class="opacity--50">
