change how deeplinking works

--- a/open.html
+++ b/open.html
@@ -12,7 +12,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Please open this link on your iOS device (iPhone, iPad, iPod)." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <meta name="apple-itunes-app" content="app-argument=stagedoor://venue/4"> -->
+  <!-- <meta name="apple-itunes-app" content="app-argument=stagedoor://venue_id=venue/4"> -->
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
