--- a/mtsoc.html
+++ b/mtsoc.html
@@ -12,7 +12,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Stay up to date with current and upcoming shows at Imperial College Musical Theatre Society. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://threatre_company/938">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://theatre_company_id=938">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/mtsoc-stagedoor.png" />
@@ -47,7 +47,7 @@
     <section class="padding--bottom-one-space  show-on-mobile">
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      <a href="stagedoor://threatre_company/938" class="button--open-in-app">Open in App</a>
+      <a href="stagedoor://theatre_company_id=938" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
