--- a/theatren16.html
+++ b/theatren16.html
@@ -12,7 +12,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="description" content="Stay up to date with current and upcoming shows at Theatre N16. Save and Recommend your favourite ones. Plug into theatre!" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://venue_id=venue/184">
+  <meta name="apple-itunes-app" content="app-id=963068912, app-argument=stagedoor://venue_id=184">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/theatren16-stagedoor.png" />
@@ -47,7 +47,7 @@
     <section class="padding--bottom-one-space  show-on-mobile">
       <a href="https://stagedoor.hoko.link/theatren16" class="appstore-link" title="Download iOS app"><img src="images/apple-touch-icon.png" alt="apple icon stagedoor theatre" class="appicon  block--inline  vertical-align--middle" /></a>
       <h2 class="block--inline  padding--left-one-space">Stagedoor</h2>
-      <a href="stagedoor://venue_id=venue/184" class="button--open-in-app">Open in App</a>
+      <a href="stagedoor://venue_id=184" class="button--open-in-app">Open in App</a>
     </section>
 
     <section class="cf">
