--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="http://stagedoorapp.com" />
+  <link rel="canonical" href="https://stagedoorapp.com" />
   <meta name="google-site-verification" content="SAvFrim0Slkky87hhHSAoDlrkHf3nLyvrBy6SOrx9-o" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -16,20 +16,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
-  <meta property="og:image" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <meta property="og:image" content="https://stagedoorapp.com/images/stagedoor-cover.png" />
   <meta property="og:title" content="London theatre app - Stagedoor" />
   <meta property="og:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives." />
-  <meta property="og:url" content="http://stagedoorapp.com" />
+  <meta property="og:url" content="https://stagedoorapp.com" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@stagedoorLDN" />
   <meta name="twitter:creator" content="@stagedoorLDN" />
-  <meta name="twitter:url" content="http://stagedoorapp.com" />
+  <meta name="twitter:url" content="https://stagedoorapp.com" />
   <meta name="twitter:title" content="London theatre app - Stagedoor" />
   <meta name="twitter:description" content="The must-have app for the London theatre lover. Stay up-to-date with what’s on, where it’s on, and who’s in it. Discover, save, and rate your favourite London theatre shows and creatives.">
-  <meta name="twitter:image:src" content="http://stagedoorapp.com/images/stagedoor-cover.png" />
+  <meta name="twitter:image:src" content="https://stagedoorapp.com/images/stagedoor-cover.png" />
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -130,12 +130,12 @@
 
   <div class="container  max-width--980  horizontal--center  padding--top-six-spaces  position--relative">
     <nav class="homepage--navigation">
-      <a href="http://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
-      <a href="http://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
+      <a href="https://stagedoorapp.com" class="current" title="Back to Homepage">Home</a>
+      <a href="https://stagedoorapp.com/partners" title="Become a partner">Claim your page</a>
       <a href="https://medium.com/@stagedoor" rel="nofollow" target="_blank" title="Blog">Blog</a>
+      <a href="https://stagedoorapp.com/podcast" title="Ad Lib Podcast">Podcast</a>
       <a href="https://itunes.apple.com/us/app/stagedoor-london-theatre-app/id963068912?ls=1&mt=8" id="appstore-link" title="Download iOS app">Download <span class="hide-on-mobile"> app</span></a>
       <!-- <a href="http://stagedoorapp.com/camdenfringe" title="Official app of The Camden Fringe" class="hide-on-mobile  camden-fringe-colour">#CamdenFringe</a> -->
-      <a href="http://stagedoorapp.com/vaultfestival" title="VAULT Festival" class="hide-on-mobile  vault-festival-colour">#VAULTFestival</a>
     </nav>
 
     <section class="padding--bottom-one-space  show-on-mobile  text--center">
