LIFT Festival changes

--- a/liftfestival.html
+++ b/liftfestival.html
@@ -10,14 +10,14 @@
   <link rel="canonical" href="http://stagedoorapp.com/liftfestival" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="LIFT Festival 2018 shows. Book, save, and share LIFT Festival shows from Stagedoor app." />
+  <meta name="description" content="Explore, save and share LIFT Festival shows on the Stagedoor app" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-itunes-app" content="app-id=963068912">
 
   <meta property="fb:app_id" content="1645521525723763"/>
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/lift-festival-2018-stagedoor.png" />
   <meta property="og:title" content="LIFT Festival 2018" />
-  <meta property="og:description" content="LIFT Festival 2018 shows. Book, save, and share LIFT Festival shows from Stagedoor app." />
+  <meta property="og:description" content="Explore, save and share LIFT Festival shows on the Stagedoor app" />
   <meta property="og:url" content="http://stagedoorapp.com/liftfestival" />
   <meta property="og:site_name" content="Stagedoor" />
   <meta property="og:type" content="blog" />
@@ -28,7 +28,7 @@
   <meta name="twitter:creator" content="@stagedoorLDN" />
   <meta name="twitter:url" content="http://stagedoorapp.com/liftfestival" />
   <meta name="twitter:title" content="LIFT Festival 2018" />
-  <meta name="twitter:description" content="LIFT Festival 2018 shows. Book, save, and share LIFT Festival shows from Stagedoor app." />
+  <meta name="twitter:description" content="Explore, save and share LIFT Festival shows on the Stagedoor app" />
   <meta property="og:image" content="http://stagedoorapp.com/images/theatre/lift-festival-2018-stagedoor.png" />
 </head>
 <body>
