canonical change for LSDF

--- a/LSDF.html
+++ b/LSDF.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon@2x.png">
   <link href="https://plus.google.com/+Stagedoorapp" rel="publisher" />
   <link rel="stylesheet" type="text/css" href="styles/style.min.css" />
-  <link rel="canonical" href="https://stagedoorapp.com/lsdf" />
+  <link rel="canonical" href="https://stagedoorapp.com/LSDF" />
 
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="author" content="https://plus.google.com/+Stagedoorapp" />
