removing download alert on iOS

--- a/LSDF.html
+++ b/LSDF.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <!-- Google Tag Manager -->
-    <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -66,9 +66,9 @@
       var vote = document.getElementById("vote") ;
       vote.innerHTML = '<div class="text--center  text"><h3 class="text--white">London Student Drama Festival 2018</h3><br/><h1 class="h1--giga">Download Stagedoor to vote:</h1><br/><h3><a href="https://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912" class="button  display--block  no-link-colour" title="Open in Stagedoor app">Tap to download now</a></h3><br/><p>After you’ve downloaded Stagedoor:</p><p>1. <b>Signup</b> with Twitter or Facebook </p><p>2. Go to <em><b>Explore</b></em> tab and open the <em><b>LSDF</b></em> list</p><p>3. <b>Save</b> your favourite shows to count as a vote.</p></div>'
 
-      var answer = confirm('You can vote via the Stagedoor app. Download Stagedoor now?');
-      if (answer == true)
-        window.location.href = "https://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912"
+      // var answer = confirm('You can vote via the Stagedoor app. Download Stagedoor now?');
+      // if (answer == true)
+        // window.location.href = "https://itunes.apple.com/gb/app/stagedoor-london-theatre-app/id963068912"
     }
   </script>
   </body>
