--- a/podcast.html
+++ b/podcast.html
@@ -68,16 +68,29 @@
 
     <section class="horizontal--center  padding--top-four-spaces  max-width--700  cf">
       <div class="cf  padding--top-two-spaces">
-        <h2><b>Teaser episode</b></h2>
-        <p><iframe width="370px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/408941274&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <img src="./images/podcast/ad-lib-stagedoor.jpg" width="300px" alt="ad lib stagedoor podcast" class="float--left  margin--right-one-space" />
+        <h2><b><a href="https://soundcloud.com/stagedoorldn/ad-lib-teaser" class="no-link-colour" title="Listen on Soundcloud">Teaser episode</a></b></h2>
+        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/408941274&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
         <p><span class="text--light-grey">Release date: 14 March 2018.</span></p>
         <p>Each week director Kirk Jameson welcomes one of his favourite theatre personalities to chat about the joys and challenges of a career in the arts.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <!--img src="./images/podcast/alice-fearn-stagedoor.jpg" width="240px" alt="alice fearn stagedoor podcast" class="float--left  margin--right-one-space" /-->
-        <h2><b>Episode 1</b></h2>
+        <img src="./images/podcast/artists/1-alice-fearn.jpg" width="300px" alt="alice fearn stagedoor podcast" class="float--left  margin--right-one-space" />
+        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/alice-fearn" class="no-link-colour" title="Listen on Soundcloud">Episode 1 - Alice Fearn</a></b></h2>
+        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/416925429&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
         <p><span class="text--light-grey">Release date: 21 March 2018.</span></p>
+        <p>In this episode Kirk is joined by Alice Fearn; London’s Current Elphaba, from the Global Sensation “Wicked”. They discuss Alice’s path into theatre and her numerous musical credits including “Les Miserables”, “Into the Woods” “Oliver!” and “Shrek”.</p>
+      </div>
+
+      <div class="cf  padding--top-two-spaces">
+        <h2><b>Episode 2</b></h2>
+        <p><span class="text--light-grey">Release date: 28 March 2018.</span></p>
+      </div>
+
+      <div class="cf  padding--top-two-spaces">
+        <h2><b>Episode 3</b></h2>
+        <p><span class="text--light-grey">Release date: 4 April 2018.</span></p>
       </div>
     </section>
 
