small styling changes + GA code

--- a/promo.html
+++ b/promo.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <!-- Google Tag Manager -->
-  <!--noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MQWRJJ"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -61,7 +61,7 @@
             <a href="images/promo/banner/email-stagedoor-red.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/email-stagedoor-red.png" alt="facebook banner stagedoor red" width="320px"/></a>
             <a href="images/promo/banner/email-stagedoor-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/email-stagedoor-white.png" alt="facebook banner stagedoor white" width="320px"/></a>
           </div>
-          <small class="padding--top-one-space  text--light-grey  text--strong">Click on the desired image to download full size (1000&times;200px, RGB).</small>
+          <small class="text--light-grey  text--strong">Click on the desired image to download full size (1000&times;200px PNG, RGB).</small>
         </div>
         <div class="padding--top-two-spaces  center-on-mobile">
           <h2 id="facebook" class="text--strong">Facebook &amp; Twitter</h2>
@@ -70,7 +70,7 @@
             <a href="images/promo/banner/fb-stagedoor-red.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/fb-stagedoor-red.png" alt="facebook banner stagedoor red" width="320px"/></a>
             <a href="images/promo/banner/fb-stagedoor-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/fb-stagedoor-white.png" alt="facebook banner stagedoor white" width="320px"/></a>
           </div>
-          <small class="padding--top-one-space  text--light-grey  text--strong">Click on the desired image to download full size (1200&times;628px, RGB).</small>
+          <small class="text--light-grey  text--strong">Click on the desired image to download full size (1200&times;628px PNG, RGB).</small>
         </div>
         <div class="padding--top-two-spaces  center-on-mobile">
           <h2 id="instagram" class="text--strong">Instagram</h2>
@@ -79,7 +79,7 @@
             <a href="images/promo/banner/instagram-stagedoor-red.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/instagram-stagedoor-red.png" alt="facebook banner stagedoor red" width="320px"/></a>
             <a href="images/promo/banner/instagram-stagedoor-white.png" class="margin--right-one-space  margin--bottom-one-space  display--inline-block  border--1px  border--opacity-35" download><img src="images/promo/banner/instagram-stagedoor-white.png" alt="facebook banner stagedoor white" width="320px"/></a>
           </div>
-          <small class="padding--top-one-space  text--light-grey  text--strong">Click on the desired image to download full size (1080&times;1080px, RGB).</small>
+          <small class="text--light-grey  text--strong">Click on the desired image to download full size (1080&times;1080px PNG, RGB).</small>
         </div>
       </section>
 
@@ -105,6 +105,11 @@
 
       <section class="padding--top-four-spaces">
         <h2 class="h2--giga  text--yellow" id="table-talkers">6. Table talkers</h2>
+        <p>Coming soon.</p>
+      </section>
+
+      <section class="padding--top-four-spaces">
+        <h2 class="h2--giga  text--yellow" id="logo">7. Logo</h2>
         <p>Coming soon.</p>
       </section>
     </div>
