new podcast episode #2

--- a/podcast.html
+++ b/podcast.html
@@ -62,36 +62,38 @@
         <a href="https://soundcloud.com/stagedoorldn"><img src="./images/podcast/soundcloud.svg" height="49px" alt="soundcloud svg" /></a>&nbsp;
         <a href="https://www.stitcher.com/podcast/michael-10/ad-lib"><img src="./images/podcast/stitcher.svg" height="49px" alt="stitcher svg" /></a>&nbsp;
         <a href="https://overcast.fm/itunes1355675761/ad-lib"><img src="./images/podcast/overcast.svg" height="49px" alt="overcast svg" /></a>&nbsp;
-        <!-- <a href="https://spotify.com"><img src="./images/podcast/spotify.png" height="40px" alt="spotify badge" /></a>&nbsp; -->
       </div>
     </section>
 
     <section class="horizontal--center  padding--top-four-spaces  max-width--700  cf">
       <div class="cf  padding--top-two-spaces">
-        <img src="./images/podcast/ad-lib-stagedoor.jpg" width="300px" alt="ad lib stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2><b><a href="https://soundcloud.com/stagedoorldn/ad-lib-teaser" class="no-link-colour" title="Listen on Soundcloud">Teaser episode</a></b></h2>
-        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/408941274&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
-        <p><span class="text--light-grey">Release date: 14 March 2018.</span></p>
-        <p>Each week director Kirk Jameson welcomes one of his favourite theatre personalities to chat about the joys and challenges of a career in the arts.</p>
+        <img src="./images/podcast/artists/2-mark-anderson.jpg" width="300px" alt="mark anderson stagedoor podcast" class="float--left  margin--right-one-space" />
+        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/mark-anderson" class="no-link-colour" title="Listen on Soundcloud">Ep. 2 - Mark Anderson</a></b></h2>
+        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/421221348&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <p><span class="text--light-grey">Release date: 28 March 2018.</span></p>
+        <p>In this episode Kirk is joined by actor Mark Anderson as he appears in “The Grinning Man” at Trafalgar Studios. They discuss the changing face of London theatre, new writing and influence of Stiles and Drewe on his career.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
         <img src="./images/podcast/artists/1-alice-fearn.jpg" width="300px" alt="alice fearn stagedoor podcast" class="float--left  margin--right-one-space" />
-        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/alice-fearn" class="no-link-colour" title="Listen on Soundcloud">Episode 1 - Alice Fearn</a></b></h2>
+        <h2 class="no-margin"><b><a href="https://soundcloud.com/stagedoorldn/alice-fearn" class="no-link-colour" title="Listen on Soundcloud">Ep. 1 - Alice Fearn</a></b></h2>
         <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/416925429&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
         <p><span class="text--light-grey">Release date: 21 March 2018.</span></p>
         <p>In this episode Kirk is joined by Alice Fearn; London’s Current Elphaba, from the Global Sensation “Wicked”. They discuss Alice’s path into theatre and her numerous musical credits including “Les Miserables”, “Into the Woods” “Oliver!” and “Shrek”.</p>
       </div>
 
       <div class="cf  padding--top-two-spaces">
-        <h2><b>Episode 2</b></h2>
-        <p><span class="text--light-grey">Release date: 28 March 2018.</span></p>
+        <img src="./images/podcast/ad-lib-stagedoor.jpg" width="300px" alt="ad lib stagedoor podcast" class="float--left  margin--right-one-space" />
+        <h2><b><a href="https://soundcloud.com/stagedoorldn/ad-lib-teaser" class="no-link-colour" title="Listen on Soundcloud">Ad Lib Teaser</a></b></h2>
+        <p><iframe width="380px" height="63px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/408941274&amp;color=ff5500&amp;inverse=false&amp;auto_play=false&amp;show_user=false"></iframe></p>
+        <p><span class="text--light-grey">Release date: 14 March 2018.</span></p>
+        <p>Each week director Kirk Jameson welcomes one of his favourite theatre personalities to chat about the joys and challenges of a career in the arts.</p>
       </div>
 
-      <div class="cf  padding--top-two-spaces">
+<!--       <div class="cf  padding--top-two-spaces">
         <h2><b>Episode 3</b></h2>
         <p><span class="text--light-grey">Release date: 4 April 2018.</span></p>
-      </div>
+      </div> -->
     </section>
 
 
